--- a/MultiBranchTexter.csproj
+++ b/MultiBranchTexter.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="KTDU\KTDU.Parser\KTDU.Parser.csproj" />
   </ItemGroup>
 
