--- a/MultiBranchTexter.csproj
+++ b/MultiBranchTexter.csproj
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Resource Include="Resources\Images\darkIcon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
