--- a/MultiBranchTexter.csproj
+++ b/MultiBranchTexter.csproj
@@ -9,6 +9,7 @@
     <Company>GlumickStudio</Company>
     <Authors>GlumickStudio</Authors>
     <Description>为了满足多分支的游戏剧情等的写作需要而开发的多分支文本编辑器。</Description>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
